@@ -42,6 +42,16 @@
   <project_group>GNOME</project_group>
 
   <releases>
+    <release date="2017-03-28" version="3.22.4">
+      <description>
+        <p>
+          This is the fifth stable release for GNOME Calendar 3.22, and fixes
+          an outstanding performance issue in Year view.
+        </p>
+        <p>Thanks to all the contributors that worked on GNOME Calendar!</p>
+      </description>
+    </release>
+
     <release date="2017-02-28" version="3.22.3">
       <description>
         <p>
